# PAF

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE-third_party.rst  LICENSE-third_party.txt  README.rst  SECURITY.rst
.github/workflows/: macos-13.yml  macos-14.yml  macos-15.yml  ubuntu-2004-clang.yml  ubuntu-2004-gcc.yml  ubuntu-2004.yml  ubuntu-2204.yml  ubuntu-2404.yml
cmake/: PAF.cmake  PAFConfig.cmake.in
doc/: CMakeLists.txt  PAF.doxyfile.in  PAF.doxyfile.pre-1.10.in  index.rst
include/PAF/: ArchInfo.h  Error.h  Intervals.h  Memory.h  PAF.h
include/PAF/FI/: Fault.h  Oracle.h
include/PAF/SCA/: Dumper.h  Expr.h  ExprParser.h  LWParser.h  NPAdapter.h  NPArray.h  NPOperators.h  NPUtils.h  Noise.h  Power.h  SCA.h  sca-apps.h  utils.h
include/PAF/WAN/: FSTWaveFile.h  Signal.h  VCDWaveFile.h  WaveFile.h  Waveform.h
include/PAF/utils/: Misc.h  ProgressMonitor.h  StopWatch.h
lib/: CMakeLists.txt
lib/FI/: CMakeLists.txt  Fault.cpp  Oracle.cpp
lib/PAF/: ArchInfo.cpp  CMakeLists.txt  Error.cpp  Misc.cpp  PAF.cpp
lib/SCA/: CMakeLists.txt  Dumper.cpp  Expr.cpp  ExprParser.cpp  LWParser.cpp  NPArray.cpp  Noise.cpp  Power.cpp  correl.cpp  sca-apps.cpp  t-test.cpp  utils.cpp
lib/WAN/: CMakeLists.txt  FSTWaveFile.cpp  VCDWaveFile.cpp  WaveFile.cpp  Waveform.cpp
tests/: CMakeLists.txt  FVP_MPS2_M3.yml.in  Makefile.in  test-campaign-1.yml  test-campaign.py  verifyPIN-O0.crd-one.yml.results  verifyPIN-O0.crd-reset.yml.results  verifyPIN-O0.crd-set.yml.results  verifyPIN-O0.is.yml.results  verifyPIN-O1.crd-one.yml.results  verifyPIN-O1.crd-reset.yml.results  verifyPIN-O1.crd-set.yml.results  verifyPIN-O1.is.yml.results  verifyPIN-O2.crd-one.yml.results  verifyPIN-O2.crd-reset.yml.results  verifyPIN-O2.crd-set.yml.results  verifyPIN-O2.d.xref  verifyPIN-O2.is.yml.results  verifyPIN-O2.xref  verifyPIN-O3.crd-one.yml.results  verifyPIN-O3.crd-reset.yml.results  verifyPIN-O3.crd-set.yml.results  verifyPIN-O3.is.yml.results  verifyPIN-main.c  verifyPIN.c  verifyPIN.h
tools/: CMakeLists.txt
tools/check-attributes/: CMakeLists.txt  check-attributes.cpp
tools/constanttime/: CMakeLists.txt  constanttime.cpp
tools/context/: CMakeLists.txt  context.cpp
tools/faulter/: CMakeLists.txt  faulter.cpp  faulter.h  main-faulter.cpp
tools/memory/: CMakeLists.txt  memory-accesses.cpp
tools/power/: CMakeLists.txt  power.cpp
tools/run-model/: .gitignore  CMakeLists.txt  campaign.py  generate-xref.py  run-model.py  setup.py
tools/run-model/FI/: __init__.py  faultcampaign.py  utils.py
tools/run-model/PAF/: __init__.py  run_model.py
tools/sca-apps/: CMakeLists.txt  calibration.cpp  metric.cpp  np-average.cpp  np-cat.cpp  np-create.cpp  np-expand.cpp  np-utils.cpp  ns-t-test.cpp
tools/wan-apps/: CMakeLists.txt  diff.cpp  info.cpp  merge.cpp  power.cpp  zap-header.cpp
unit-tests/: ArchInfo.cpp  CMakeLists.txt  Error.cpp  Expr.cpp  ExprParser.cpp  FSTWaveFile.cpp  Fault.cpp  Intervals.cpp  LWParser.cpp  Misc.cpp  NPArray.cpp  NPOperators.cpp  NPUtils.cpp  Noise.cpp  Oracle.cpp  PAF.cpp  Power.cpp  ProgressMonitor.cpp  SCA.cpp  Scope.cpp  Signal.cpp  SignalDesc.cpp  StopWatch.cpp  VCDWaveFile.cpp  WaveFile.cpp  Waveform.cpp  encode-instructions.py  gen-nparray-test-data.py  main.cpp  paf-unit-testing.cpp  paf-unit-testing.h  sca-apps.cpp  test-np-create.py  test-np-utils.py
unit-tests/samples/: .gitattributes  Counters.fst  Counters.vcd  instances-v7m.elf  instances-v7m.trace  labels-v7m.elf  labels-v7m.trace  markers-v7m.elf  markers-v7m.trace
unit-tests/samples/sources/: .gitignore  Counters.sv  Makefile  WAN.make  instances.c  labels.c  markers.c
